--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Teko:wght@400;500&display=swap');
 
 @tailwind base;
 @tailwind components;
