--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    ::-webkit-scrollbar-thumb{
+    @apply bg-transparent shadow-sm
+    }
+    ::-webkit-scrollbar{
+    @apply w-2 bg-transparent
+    }
+    ::-webkit-scrollbar-thumb{
+    @apply rounded-none  bg-gray-400 /*color trackbar*/
+    }
+}
